--- a/Views/ProductAluminum/Details.cshtml
+++ b/Views/ProductAluminum/Details.cshtml
@@ -23,16 +23,16 @@
             @Html.DisplayFor(model => model.RatePerFeet)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.colorId)
+            @Html.DisplayNameFor(model => model.AluminumColor.Name)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.colorId)
+            @Html.DisplayFor(model => model.AluminumColor.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.GageId)
+            @Html.DisplayNameFor(model => model.AluminumGage.Name)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.GageId)
+            @Html.DisplayFor(model => model.AluminumGage.Name)
         </dd>
     </dl>
 </div>
