--- a/Views/ProductAluminum/Create.cshtml
+++ b/Views/ProductAluminum/Create.cshtml
@@ -1,4 +1,4 @@
-@model Zedx.Models.ViewModel.AluminumColorGageViewModel
+@model Zedx.Models.ProductAluminum
 
 @{
     ViewData["Title"] = "Create";
@@ -13,29 +13,22 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="productAluminum.ProductAluminumName" class="control-label"></label>
-                <input asp-for="productAluminum.ProductAluminumName" class="form-control" />
-                <span asp-validation-for="productAluminum.ProductAluminumName" class="text-danger"></span>
+                <label asp-for="ProductAluminumName" class="control-label"></label>
+                <input asp-for="ProductAluminumName" class="form-control" />
+                <span asp-validation-for="ProductAluminumName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="productAluminum.RatePerFeet" class="control-label"></label>
-                <input asp-for="productAluminum.RatePerFeet" class="form-control" />
-                <span asp-validation-for="productAluminum.RatePerFeet" class="text-danger"></span>
+                <label asp-for="RatePerFeet" class="control-label"></label>
+                <input asp-for="RatePerFeet" class="form-control" />
+                <span asp-validation-for="RatePerFeet" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="productAluminum.colorId" class="control-label"></label>
-                <select asp-for="productAluminum.colorId" asp-items="Model.listaluminumColor" class="form-control" >
-                    <option></option>
-                </select>
-                <span asp-validation-for="productAluminum.colorId" class="text-danger"></span>
+                <label asp-for="AluminumColorID" class="control-label"></label>
+                <select asp-for="AluminumColorID" class ="form-control" asp-items="ViewBag.AluminumColorID"></select>
             </div>
             <div class="form-group">
-                <label asp-for="productAluminum.GageId" class="control-label"></label>
-                <select asp-for="productAluminum.GageId" asp-items="Model.listaluminumGage" class="form-control">
-                    <option></option>
-                    
-                </select>
-                <span asp-validation-for="productAluminum.GageId" class="text-danger"></span>
+                <label asp-for="AluminumGageID" class="control-label"></label>
+                <select asp-for="AluminumGageID" class ="form-control" asp-items="ViewBag.AluminumGageID"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
