--- a/Views/ProductAluminum/Edit.cshtml
+++ b/Views/ProductAluminum/Edit.cshtml
@@ -24,14 +24,14 @@
                 <span asp-validation-for="RatePerFeet" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="colorId" class="control-label"></label>
-                <input asp-for="colorId" class="form-control" />
-                <span asp-validation-for="colorId" class="text-danger"></span>
+                <label asp-for="AluminumColorID" class="control-label"></label>
+                <select asp-for="AluminumColorID" class="form-control" asp-items="ViewBag.AluminumColorID"></select>
+                <span asp-validation-for="AluminumColorID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="GageId" class="control-label"></label>
-                <input asp-for="GageId" class="form-control" />
-                <span asp-validation-for="GageId" class="text-danger"></span>
+                <label asp-for="AluminumGageID" class="control-label"></label>
+                <select asp-for="AluminumGageID" class="form-control" asp-items="ViewBag.AluminumGageID"></select>
+                <span asp-validation-for="AluminumGageID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
