--- a/Views/ProductAluminum/Index.cshtml
+++ b/Views/ProductAluminum/Index.cshtml
@@ -19,10 +19,10 @@
                 @Html.DisplayNameFor(model => model.RatePerFeet)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.colorId)
+                @Html.DisplayNameFor(model => model.AluminumColor.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.GageId)
+                @Html.DisplayNameFor(model => model.AluminumGage.Name)
             </th>
             <th></th>
         </tr>
@@ -37,10 +37,10 @@
                 @Html.DisplayFor(modelItem => item.RatePerFeet)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.colorId)
+                @Html.DisplayFor(modelItem => item.AluminumColor.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.GageId)
+                @Html.DisplayFor(modelItem => item.AluminumGage.Name)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ProductAluminumId">Edit</a> |
