--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
     <header>
+    
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Zedx</a>
@@ -17,15 +20,58 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
+                    <ul class="navbar-nav flex-grow-1  multi-level">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                    
+                          <li class="dropdown nav-item">
+        <a class="nav-link text-dark dropdown-toggle" data-toggle="dropdown" href="#">Aluminum
+        <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="#"><a class="nav-link text-dark" asp-area="" asp-controller="ProductAluminum" asp-action="index">Product</a></li>
+          <li><a href="#"><a class="nav-link text-dark" asp-area="" asp-controller="AluminumGage" asp-action="index">Gage</a></li>
+          <li><a href="#"><a class="nav-link text-dark" asp-area="" asp-controller="AluminumColor" asp-action="index">Color</a></li>
+        </ul>
+      </li>
+
+        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="AluminumStock" asp-action="Index">Aluminum Stock</a>
                         </li>
-                    </ul>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ProductAluminum" asp-action="Index">Aluminum Stock</a>
+                        </li>
+ </ul>
                 </div>
+                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+       <ul class="navbar-nav ml-auto">
+        @*If the user is signed-in display Logout link*@
+        @if (SignInManager.IsSignedIn(User))
+        {
+            <li class="nav-item">
+                <form method="post" asp-controller="account" asp-action="logout">
+                    <button type="submit" style="width:auto"
+                            class="nav-link btn btn-link py-0">
+                        Logout @User.Identity.Name
+                    </button>
+                </form>
+            </li>
+        }
+        else
+        {
+            <li class="nav-item">
+                <a class="nav-link" asp-controller="account" asp-action="register">
+                    Register
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" asp-controller="account" asp-action="login">
+                    Login
+                </a>
+            </li>
+        }
+    </ul>
+</div>
             </div>
         </nav>
     </header>
