--- a/Views/AllProduct/Create.cshtml
+++ b/Views/AllProduct/Create.cshtml
@@ -13,9 +13,9 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="ProductId" class="control-label"></label>
-                <input asp-for="ProductId" class="form-control" />
-                <span asp-validation-for="ProductId" class="text-danger"></span>
+                <label asp-for="AllProductId" class="control-label"></label>
+                <input asp-for="AllProductId" class="form-control" />
+                <span asp-validation-for="AllProductId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
