--- a/Views/AllProduct/Delete.cshtml
+++ b/Views/AllProduct/Delete.cshtml
@@ -74,7 +74,7 @@
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="ProductId" />
+        <input type="hidden" asp-for="AllProductId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
