--- a/Views/AllProduct/Details.cshtml
+++ b/Views/AllProduct/Details.cshtml
@@ -73,6 +73,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ProductId">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.AllProductId">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
