--- a/Views/AllProduct/Index.cshtml
+++ b/Views/AllProduct/Index.cshtml
@@ -49,9 +49,9 @@
                 @Html.DisplayFor(modelItem => item.AluminumGage.Name)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ProductId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ProductId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ProductId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.AllProductId">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.AllProductId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.AllProductId">Delete</a>
             </td>
         </tr>
 }
