--- a/Views/BillDetail/Create.cshtml
+++ b/Views/BillDetail/Create.cshtml
@@ -18,9 +18,9 @@
                 <span asp-validation-for="BillDetailId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ProductId" class="control-label"></label>
-                <input asp-for="ProductId" class="form-control" />
-                <span asp-validation-for="ProductId" class="text-danger"></span>
+                <label asp-for="AllProductId" class="control-label"></label>
+                <input asp-for="AllProductId" class="form-control" />
+                <span asp-validation-for="AllProductId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="AluminumColorId" class="control-label"></label>
