--- a/Views/BillDetail/Edit.cshtml
+++ b/Views/BillDetail/Edit.cshtml
@@ -14,9 +14,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="BillDetailId" />
             <div class="form-group">
-                <label asp-for="ProductId" class="control-label"></label>
-                <input asp-for="ProductId" class="form-control" />
-                <span asp-validation-for="ProductId" class="text-danger"></span>
+                <label asp-for="AllProductId" class="control-label"></label>
+                <input asp-for="AllProductId" class="form-control" />
+                <span asp-validation-for="AllProductId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="AluminumColorId" class="control-label"></label>
